Cause Skia to use a smaller glyph cache on low-end Android

Currently Skia uses an up-to 8MB/texture glyph cache on all Android
devices. To save memory on low-end devices we are switching to an
up-to 2MB cache.

BUG=717178
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2869443003
Cr-Commit-Position: refs/heads/master@{#470022}

Former-commit-id: 9ce0013f7cb1f236cffbbae7bf43a6b7a8d09ef0